--- a/HTML/Index.html
+++ b/HTML/Index.html
@@ -44,7 +44,7 @@
                 <div class="swiper-slide slide" style="background: url(../Img/Manjaro_Background.jpg) no-repeat">
                     <div class="content">
                         <span>Be IQ, for knowledge</span>
-                        <h3>Torne-se Expert nas distros do Linux</h3>
+                        <h3>Torne-se Expert nas distros do Linux e mais!</h3>
                         <a href="#" class="btn">Get Started</a>
                     </div>
                 </div>
