--- a/HTML/Index.html
+++ b/HTML/Index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Distros</title>
+    <title>Alpha - Ômega</title>
 
     <!--Unicons-->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
@@ -20,7 +20,7 @@
 <body>
     <!--Começo do Section Header-->
     <header class="header">
-        <a href="#" class="logo"><span>DI</span>STROS</a>
+        <a href="#" class="logo"><span>Alpha</span> Ômega</a>
 
         <div id="menu-btn"><i class="uil uil-bars"></i></div>
 
@@ -44,7 +44,7 @@
                 <div class="swiper-slide slide" style="background: url(../Img/Manjaro_Background.jpg) no-repeat">
                     <div class="content">
                         <span>Be IQ, for knowledge</span>
-                        <h3>Torne-se Expert nas distros do Linux e mais!</h3>
+                        <h3>Become an expert in Linux distros and more!!</h3>
                         <a href="#" class="btn">Get Started</a>
                     </div>
                 </div>
@@ -52,7 +52,7 @@
                 <div class="swiper-slide slide" style="background: url(../Img//Garuda_Background.png) no-repeat">
                     <div class="content">
                         <span>Be IQ, for knowledge</span>
-                        <h3>Torne-se Expert nas distros do Linux</h3>
+                        <h3>Learn to use all commands on different terminals.</h3>
                         <a href="#" class="btn">Get Started</a>
                     </div>
                 </div>
@@ -60,7 +60,7 @@
                 <div class="swiper-slide slide" style="background: url(../Img/Arch-Linux_Background.jpg) no-repeat">
                     <div class="content">
                         <span>Be IQ, for knowledge</span>
-                        <h3>Torne-se Expert nas distros do Linux</h3>
+                        <h3>Here you learn to use each operating system</h3>
                         <a href="#" class="btn">Get Started</a>
                     </div>
                 </div>
@@ -80,25 +80,28 @@
         <div class="content">
             <span>About Us</span>
             <h3 class="title">Every day is a chance to Become Better</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque eius enim impedit dolor, ad,
-                assumenda a perferendis voluptates optio, officiis animi corrupti. Repellendus, officiis. Sed, aliquam
-                facere? Culpa, in minus?</p>
+            <p>We are a team of friends who want to pass on knowledge and learning and, over time, experience. Below, a
+                little about some topics that you will master that you will find if you choose to be part of our team.
+                Enjoy!</p>
             <div class="box-container">
                 <div class="box">
                     <h3><i class="uil uil-check"></i>Mind</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Hic, iste!</p>
+                    <p>Don't be precocious, here you will have the time you need to learn and acquire excellent skills,
+                        take it easy and peace of mind.</p>
                 </div>
                 <div class="box">
                     <h3><i class="uil uil-check"></i>Force</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Hic, iste!</p>
+                    <p>Awaken your willpower and stay in shape with our team's heartfelt suggestions at every line of
+                        code - command line.</p>
                 </div>
                 <div class="box">
                     <h3><i class="uil uil-check"></i>Skill</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Hic, iste!</p>
+                    <p>Experience and skills go hand in hand, so your future in the job market is guaranteed. Come with
+                        us.</p>
                 </div>
                 <div class="box">
                     <h3><i class="uil uil-check"></i>Cunning</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Hic, iste!</p>
+                    <p>Just as you learn from us, we learn too. Here the sharing of knowledge is reciprocal.</p>
                 </div>
             </div>
             <a href="#" class="btn">Read More</a>
@@ -119,7 +122,7 @@
                 <div class="content">
                     <img src="../Img/Black-Arch.jpg" alt="BlackArch-Linux">
                     <h3>Hacking</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, natus?</p>
+                    <p>Stay on top. Learn in-depth techniques to start hacking professionally</p>
                     <a href="#" class="btn">Read More</a>
                 </div>
             </div>
@@ -131,7 +134,7 @@
                 <div class="content">
                     <img src="../Img/Debian.jpg" alt="Debian">
                     <h3>Kernel</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, natus?</p>
+                    <p>Learn all about the different Linux, Unix and Windows operating systems and their bases</p>
                     <a href="#" class="btn">Read More</a>
                 </div>
             </div>
@@ -143,7 +146,8 @@
                 <div class="content">
                     <img src="../Img//Ubuntu.png" alt="Ubuntu">
                     <h3>Look Awesome</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, natus?</p>
+                    <p>Keep your desktop always clean and organized with simple methods that make it incredibly
+                        beautiful</p>
                     <a href="#" class="btn">Read More</a>
                 </div>
             </div>
@@ -158,8 +162,8 @@
         <div class="information">
             <span>Pricing Plan</span>
             <h3>Affotable Pricing Plan for You</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In minus saepe nulla eveniet, eos ex numquam
-                adipisci voluptates magnam distinctio.</p>
+            <p>Come be part of our team and become an expert in the area and in the future you can join us! Don't wait,
+                choose a plan and start now! We are waiting for you.</p>
             <p><i class="uil uil-check-circle"></i> OverRall Results</p>
             <p><i class="uil uil-check-circle"></i> Code Line Tags</p>
             <p><i class="uil uil-check-circle"></i> Hacking</p>
@@ -169,7 +173,7 @@
 
         <div class="plan basic">
             <h3>Basic Plan</h3>
-            <div class="price"><span>R$</span>100<span>/Mês</span></div>
+            <div class="price"><span>R$</span>230<span>/Mês</span></div>
             <div class="list">
                 <p><i class="uil uil-check-circle"></i> Front End</p>
                 <p><i class="uil uil-check-circle"></i> PHP e SQL</p>
@@ -182,7 +186,7 @@
 
         <div class="plan">
             <h3>Premium Plan</h3>
-            <div class="price"><span>R$</span>170<span>/Mês</span></div>
+            <div class="price"><span>R$</span>370<span>/Mês</span></div>
             <div class="list">
                 <p><i class="uil uil-check-circle"></i> Hacking Tecniques</p>
                 <p><i class="uil uil-check-circle"></i> Struture Kernel</p>
@@ -206,10 +210,10 @@
         <div class="box-container">
 
             <div class="box">
-                <img src="../Img/Luís.jpeg" alt="MeRyon">
+                <img src="../Img/Nicollas.jpg" alt="Nicollas">
                 <div class="content">
-                    <span>No Expert Teacher</span>
-                    <h3>Luís - "LyOne"</h3>
+                    <span>Expert Teacher</span>
+                    <h3>Nicollas Vargas</h3>
                     <div class="share">
                         <a href="#"><i class="uil uil-facebook"></i></a>
                         <a href="#"><i class="uil uil-instagram"></i></a>
@@ -220,10 +224,10 @@
             </div>
 
             <div class="box">
-                <img src="../Img/Bruna.jpeg" alt="Bruna">
+                <img src="../Img/Andrey.jpg" alt="Andrey">
                 <div class="content">
                     <span>Expert Teacher</span>
-                    <h3>Bruna Gordya</h3>
+                    <h3>Andrey Schmidt</h3>
                     <div class="share">
                         <a href="#"><i class="uil uil-facebook"></i></a>
                         <a href="#"><i class="uil uil-instagram"></i></a>
@@ -234,10 +238,10 @@
             </div>
 
             <div class="box">
-                <img src="../Img/Nicolas.jpeg" alt="Nicolas">
+                <img src="../Img/Thiemi.jpeg" alt="Thiemi">
                 <div class="content">
                     <span>Expert Teacher</span>
-                    <h3>Nicolas Ciockzek</h3>
+                    <h3>Thiemi de Lara</h3>
                     <div class="share">
                         <a href="#"><i class="uil uil-facebook"></i></a>
                         <a href="#"><i class="uil uil-instagram"></i></a>
@@ -247,19 +251,6 @@
                 </div>
             </div>
 
-            <div class="box">
-                <img src="../Img/Felipe.jpeg" alt="Felipe">
-                <div class="content">
-                    <span>Expert Teacher</span>
-                    <h3>FeliPersa</h3>
-                    <div class="share">
-                        <a href="#"><i class="uil uil-facebook"></i></a>
-                        <a href="#"><i class="uil uil-instagram"></i></a>
-                        <a href="#"><i class="uil uil-discord"></i></a>
-                        <a href="#"><i class="uil uil-linkedin"></i></i></a>
-                    </div>
-                </div>
-            </div>
         </div>
     </section>
 
@@ -270,9 +261,8 @@
     <section class="banner">
         <span>Join Us Now</span>
         <h3>Get up to 50% Discout</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam ipsam dignissimos natus voluptates minus
-            alias accusamus reiciendis! Expedita labore architecto vitae ullam minima maxime ducimus facere, similique
-            odio explicabo hic?</p>
+        <p>Join us. We are waiting for your registration here at Alpha-Ômega, don't waste time and get a discount on the
+            first installment of any of the plans you choose!! 50% off is not for everyone!!</p>
         <a href="#" class="btn">Get Discout</a>
     </section>
 
@@ -282,58 +272,60 @@
 
     <section class="review">
         <div class="information">
-            <span>Testemunhas</span>
-            <h3>What our Clients Says</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, perferendis. Quia harum soluta in
-                nostrum exercitationem. Voluptates maxime quasi consectetur?</p>
+            <span>Testimonials</span>
+            <h3>What our collaborators say</h3>
+            <p>Find out some testimonials about us, about what we are for some of our employees.</p>
             <a href="#" class="btn">Read More</a>
         </div>
 
         <div class="swiper review-slider">
             <div class="swiper-wrapper">
                 <div class="swiper-slide slide">
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum, provident.</p>
+                    <p>I thought the way they were willing to teach was fantastic.
+                        It was worth every second
+                    </p>
                     <div class="user">
-                        <img src="../Img/Thiemi.jpeg" alt="Dama de Copas">
+                        <img src="../Img/Felipe.jpeg" alt="Felipe Persa">
                         <div class="info">
-                            <h3>Thiemi de Lara</h3>
-                            <span>Designer</span>
+                            <h3>Felipe Persa</h3>
+                            <span>IT Technician</span>
                         </div>
                         <i class="uil uil-comment-heart"></i>
                     </div>
                 </div>
 
                 <div class="swiper-slide slide">
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum, provident.</p>
+                    <p>I was the first of many, it really is a lot of learning and now I'm part of the team.
+                        Satisfaction!</p>
                     <div class="user">
-                        <img src="../Img/Jennie_41.jpeg" alt="Kim Jennie">
+                        <img src="../Img/Luís.jpeg" alt="Luís">
                         <div class="info">
-                            <h3>Jennie Kim</h3>
-                            <span>Cantora</span>
+                            <h3>Lyone</h3>
+                            <span>Gamer</span>
                         </div>
                         <i class="uil uil-comment-heart"></i>
                     </div>
                 </div>
 
                 <div class="swiper-slide slide">
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum, provident.</p>
+                    <p>I found it really interesting how they commit to teaching and what you need.</p>
                     <div class="user">
-                        <img src="../Img/Letícia.jpeg" alt="Letícia">
+                        <img src="../Img/Robertinho.jpeg" alt="Roberto">
                         <div class="info">
-                            <h3>Letícia Malek</h3>
-                            <span>Psicologa</span>
+                            <h3>Roberto</h3>
+                            <span>Streamer</span>
                         </div>
                         <i class="uil uil-comment-heart"></i>
                     </div>
                 </div>
 
                 <div class="swiper-slide slide">
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum, provident.</p>
+                    <p>It's really worth it, the Alpha-Omega team has now made me a great professional.</p>
                     <div class="user">
-                        <img src="../Img/Thiago.jpeg" alt="Thiago">
+                        <img src="../Img/Bruna.jpeg" alt="Bruna">
                         <div class="info">
-                            <h3>Thiagão</h3>
-                            <span>Engenheiro Ambiental</span>
+                            <h3>Bruna</h3>
+                            <span>Software Engineer</span>
                         </div>
                         <i class="uil uil-comment-heart"></i>
                     </div>
@@ -361,8 +353,8 @@
                     <div class="content">
                         <div class="link"><a href="#">By User</a><span>|</span> <a href="#">21st, Março, 2022</a></div>
                         <h3>Hacking Full Setup</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus, quisquam asperiores? Non
-                            perspiciatis alias ea totam doloremque rem tempora tempore!</p>
+                        <p>We will continue our setup hack, which kernel we will use, components and devices used and
+                            more! Stay tuned to see the moment we hack the establishment with the best anti-hacking.</p>
                         <a href="#" class="btn">Read More</a>
                     </div>
                 </div>
@@ -374,8 +366,9 @@
                     <div class="content">
                         <div class="link"><a href="#">By User</a><span>|</span> <a href="#">25st, Abril, 2022</a></div>
                         <h3>Begin in MacOs</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus, quisquam asperiores? Non
-                            perspiciatis alias ea totam doloremque rem tempora tempore!</p>
+                        <p>We will actually start with the Unix and iOS system with all the necessary information, we
+                            will bring the part of installing security penetration programs and much more, news for web
+                            and mobile.</p>
                         <a href="#" class="btn">Read More</a>
                     </div>
                 </div>
@@ -387,8 +380,8 @@
                     <div class="content">
                         <div class="link"><a href="#">By User</a><span>|</span> <a href="#">11st, Junho, 2022</a></div>
                         <h3>BIOS Full Guide</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus, quisquam asperiores? Non
-                            perspiciatis alias ea totam doloremque rem tempora tempore!</p>
+                        <p>We will teach you everything about BIOS/CMOS, how to overclock, enable XMP/DOCP, update BIOS,
+                            make RAID, everything about each option and compatibility of each hardware.</p>
                         <a href="#" class="btn">Read More</a>
                     </div>
                 </div>
@@ -400,8 +393,9 @@
                     <div class="content">
                         <div class="link"><a href="#">By User</a><span>|</span> <a href="#">09th, Julho, 2022</a></div>
                         <h3>All for DataCenters</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus, quisquam asperiores? Non
-                            perspiciatis alias ea totam doloremque rem tempora tempore!</p>
+                        <p>Everything about the structure of computer networks, client side and server side, physical
+                            and virtual servers, all the organization and attention to detail, we will show you how to
+                            make RAIDs too.</p>
                         <a href="#" class="btn">Read More</a>
                     </div>
                 </div>
@@ -413,8 +407,9 @@
                     <div class="content">
                         <div class="link"><a href="#">By User</a><span>|</span> <a href="#">30st, Agosto, 2022</a></div>
                         <h3>Making your Gamer Setup</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus, quisquam asperiores? Non
-                            perspiciatis alias ea totam doloremque rem tempora tempore!</p>
+                        <p>Hardware enthusiast or not, you'll love every detail, a dream setup, all about the best
+                            prices on a high end PC, entry-level PC and a best value for money, all just here, don't
+                            miss out!</p>
                         <a href="#" class="btn">Read More</a>
                     </div>
                 </div>
