--- a/HTML/Index.html
+++ b/HTML/Index.html
@@ -470,7 +470,7 @@
         </div>
     </section>
 
-    <div class="credit">Created by <span>&copy; Luís</span>| Todos os direitos reservados!</div>
+    <div class="credit">Created by <span>&copy; Andrey, Bruna, Luís, Nicollas & Thiemi </span>| Todos os direitos reservados!</div>
 
     <!--Fim do Section Footer-->
 
